--- a/FrontEnd/.gitignore
+++ b/FrontEnd/.gitignore
@@ -1,42 +1,24 @@
-# Node modules
-node_modules/
-
-# Build output
-dist/
-
-# Vite cache
-.vite/
-
 # Logs
 logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Environment variables
-.env
-.env.local
-.env.*.local
+node_modules
+dist
+dist-ssr
+*.local
 
-# IDE and editor specific files
-.idea/
-.vscode/
-*.sublime-project
-*.sublime-workspace
-
-# OS specific files
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-Thumbs.db
-
-# Coverage directory used by tools like istanbul
-coverage/
-
-# Temporary files
-*.tmp
-*.temp
-
-# Miscellaneous
-*.tgz
-*.zip
-*.tar.gz
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
