--- a/BackEnd/requirements.txt
+++ b/BackEnd/requirements.txt
@@ -12,7 +12,7 @@ google-auth==2.34.0
 google-auth-httplib2==0.2.0
 google-generativeai==0.7.2
 googleapis-common-protos==1.65.0
-grpcio==1.66.1
+grpcio
 grpcio-status==1.62.3
 h11==0.14.0
 httplib2==0.22.0
